--- a/Infrastructure/PaymentService.Infrastructure.DataAccess/PaymentService.Infrastructure.DataAccess.csproj
+++ b/Infrastructure/PaymentService.Infrastructure.DataAccess/PaymentService.Infrastructure.DataAccess.csproj
@@ -4,6 +4,11 @@
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RootNamespace>PaymentService.Infrastructure.DataAccess</RootNamespace>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="FluentMigrator" />
+    </ItemGroup>
 
 </Project>
