--- a/src/Infrastructure/PaymentService.Infrastructure.DataAccess/PaymentService.Infrastructure.DataAccess.csproj
+++ b/src/Infrastructure/PaymentService.Infrastructure.DataAccess/PaymentService.Infrastructure.DataAccess.csproj
@@ -9,6 +9,17 @@
 
     <ItemGroup>
       <PackageReference Include="FluentMigrator" />
+      <PackageReference Include="FluentMigrator.Runner" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
+      <PackageReference Include="Microsoft.Extensions.Options" />
+      <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" />
+      <PackageReference Include="Npgsql" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\Application\PaymentService.Application.Abstractions\PaymentService.Application.Abstractions.csproj" />
     </ItemGroup>
 
 </Project>
