--- a/src/Infrastructure/PaymentService.Infrastructure.DataAccess/PaymentService.Infrastructure.DataAccess.csproj
+++ b/src/Infrastructure/PaymentService.Infrastructure.DataAccess/PaymentService.Infrastructure.DataAccess.csproj
@@ -13,6 +13,7 @@
       <PackageReference Include="Microsoft.Extensions.Configuration" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" />
       <PackageReference Include="Microsoft.Extensions.Options" />
       <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" />
       <PackageReference Include="Npgsql" />
