--- a/src/Presentation/PaymentService.Presentation.Grpc/appsettings.json
+++ b/src/Presentation/PaymentService.Presentation.Grpc/appsettings.json
@@ -16,5 +16,16 @@
     "Username": "payment",
     "Password": "payment",
     "Database": "payment_db"
+  },
+  "Presentation": {
+    "Kafka": {
+      "Host": "localhost:9092",
+      "Consumers": {
+        "UserCreation": {
+          "Group": "payment-service",
+          "Topic": "user_creation"
+        }
+      }
+    }
   }
 }
