feat: block and unblock user event were added to kafka consumer

--- a/src/Presentation/PaymentService.Presentation.Grpc/appsettings.json
+++ b/src/Presentation/PaymentService.Presentation.Grpc/appsettings.json
@@ -23,7 +23,7 @@
       "Consumers": {
         "UserCreation": {
           "Group": "payment-service",
-          "Topic": "user_creation"
+          "Topic": "user_events"
         }
       }
     }
