--- a/src/Application/PaymentService.Application.Contracts/PaymentService.Application.Contracts.csproj
+++ b/src/Application/PaymentService.Application.Contracts/PaymentService.Application.Contracts.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\PaymentService.Application.Models\PaymentService.Application.Models.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Itmo.Dev.Platform.Events" />
+    </ItemGroup>
+
 </Project>
