--- a/src/Presentation/PaymentService.Presentation.Grpc/docker-compose.yaml
+++ b/src/Presentation/PaymentService.Presentation.Grpc/docker-compose.yaml
@@ -39,7 +39,7 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: EXTERNAL:PLAINTEXT,INTERNAL:PLAINTEXT
       ALLOW_PLAINTEXT_LISTENER: yes
       KAFKA_CREATE_TOPICS: >
-        user_creation:1:1
+        user_events:1:1
     depends_on:
       - zookeeper
     networks:
@@ -69,8 +69,8 @@ services:
       kafka.clusters.0.serde.0.name: ProtobufFile
       kafka.clusters.0.serde.0.properties.protobufFilesDir: /schemas/
 
-      kafka.clusters.0.serde.0.properties.protobufMessageNameForKeyByTopic.user_creation: users.UserCreationKey
-      kafka.clusters.0.serde.0.properties.protobufMessageNameByTopic.user_creation: users.UserCreationValue
+      kafka.clusters.0.serde.0.properties.protobufMessageNameForKeyByTopic.user_creation: users.UserEventKey
+      kafka.clusters.0.serde.0.properties.protobufMessageNameByTopic.user_creation: users.UserEventValue
 
 networks:
   csms-ticket-service-network:
