feat: producer for payment status was added

--- a/src/Presentation/PaymentService.Presentation.Grpc/PaymentService.Presentation.Grpc.csproj
+++ b/src/Presentation/PaymentService.Presentation.Grpc/PaymentService.Presentation.Grpc.csproj
@@ -13,6 +13,7 @@
       <PackageReference Include="Grpc.Tools">
         <PrivateAssets>all</PrivateAssets>
       </PackageReference>
+      <PackageReference Include="Itmo.Dev.Platform.Events" />
     </ItemGroup>
 
     <ItemGroup>
