--- a/src/Presentation/PaymentService.Presentation.Grpc/appsettings.json
+++ b/src/Presentation/PaymentService.Presentation.Grpc/appsettings.json
@@ -25,6 +25,11 @@
           "Group": "payment-service",
           "Topic": "user_events"
         }
+      },
+      "Producers": {
+        "PaymentStatus": {
+          "Topic": "payment_status"
+        }
       }
     }
   }
