--- a/src/Application/PaymentService.Application/PaymentService.Application.csproj
+++ b/src/Application/PaymentService.Application/PaymentService.Application.csproj
@@ -13,6 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Itmo.Dev.Platform.Events" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
       <PackageReference Include="System.Linq" />
       <PackageReference Include="System.Linq.Async" />
