--- a/src/Presentation/PaymentService.Presentation.Grpc/PaymentService.Presentation.Grpc.csproj
+++ b/src/Presentation/PaymentService.Presentation.Grpc/PaymentService.Presentation.Grpc.csproj
@@ -18,14 +18,7 @@
 
     <ItemGroup>
         <Protobuf ProtoRoot="Protos" Include="Protos\**\*.proto" GrpcServices="Server" />
-        <Protobuf Update="Protos\payment_status.proto">
-          <GrpcServices>Both</GrpcServices>
-          <Access>Public</Access>
-          <ProtoCompile>True</ProtoCompile>
-          <CompileOutputs>True</CompileOutputs>
-          <OutputDir>obj\Debug/net9.0/</OutputDir>
-          <Generator>MSBuild:Compile</Generator>
-        </Protobuf>
+        <Protobuf Update="Protos\Clients\users_loyalty.proto" GrpcServices="Client" />
     </ItemGroup>
 
     <ItemGroup>
