chore: clients extension was added

--- a/src/Presentation/PaymentService.Presentation.Grpc/appsettings.json
+++ b/src/Presentation/PaymentService.Presentation.Grpc/appsettings.json
@@ -10,6 +10,9 @@
       }
     }
   },
+  "UserService": {
+    "Url": "http://localhost:5001"
+  },
   "DatabaseSettings": {
     "Host": "localhost",
     "Port": "5432",
